--- a/face_tracking/index_standalone.html
+++ b/face_tracking/index_standalone.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>FaceTracking</title>
+<!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
     <script src="https://www.auduno.com/clmtrackr/build/clmtrackr.min.js"></script>
+    -->
+
+
+  <script src="p5.min.js"></script>
+  <script src="p5.dom.min.js"></script>
+  <script src="clmtrackr.min.js"></script>
+  <!--
+  <script src="ml5.min.js" type="text/javascript"></script>
+  -->
+  <script src="emotion_classifier.js"></script>
+  <script src="emotionmodel.js"></script>
+
+
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h2><a href="https://kylemcdonald.github.io/cv-examples/">cv-examples</a> Face Tracking <a href="sketch.js">source</a> <a href="https://editor.p5js.org/kylemcdonald/sketches/BJOcyD9hm">edit</a></h2>
-    <p>Track a face and its expression in video. For more see <a href="https://github.com/lmccart/itp-convo-comp/tree/master/Computer_Vision/03_clmtrackr-p5">itp-convo-comp</a>.</p>
-    <script src="sketch.js"></script>
+    <script src="face_tracking.js"></script>
 </body>
 
 </html>
